--- a/src/material-experimental/mdc-autocomplete/BUILD.bazel
+++ b/src/material-experimental/mdc-autocomplete/BUILD.bazel
@@ -38,7 +38,7 @@ sass_binary(
 )
 
 ng_e2e_test_library(
-    name = "e2e_test_sources",
+    name = "e2e_tests_lib",
     srcs = glob(["**/*.e2e.spec.ts"]),
     deps = [
         "//src/cdk/testing/private/e2e",
@@ -48,7 +48,7 @@ ng_e2e_test_library(
 e2e_test_suite(
     name = "e2e_tests",
     deps = [
-        ":e2e_test_sources",
+        ":e2e_tests_lib",
         "//src/cdk/testing/private/e2e",
     ],
 )
