--- a/src/material-experimental/mdc-chips/BUILD.bazel
+++ b/src/material-experimental/mdc-chips/BUILD.bazel
@@ -54,7 +54,7 @@ sass_binary(
 )
 
 ng_test_library(
-    name = "chips_tests_lib",
+    name = "unit_tests_lib",
     srcs = glob(
         ["**/*.spec.ts"],
         exclude = ["**/*.e2e.spec.ts"],
@@ -86,7 +86,7 @@ ng_web_test_suite(
         "@npm//:node_modules/@material/ripple/dist/mdc.ripple.js",
     ],
     deps = [
-        ":chips_tests_lib",
+        ":unit_tests_lib",
         "//src/material-experimental:mdc_require_config.js",
     ],
 )
