--- a/src/material-experimental/mdc-input/BUILD.bazel
+++ b/src/material-experimental/mdc-input/BUILD.bazel
@@ -41,7 +41,7 @@ sass_library(
 ###########
 
 ng_test_library(
-    name = "input_tests_lib",
+    name = "unit_tests_lib",
     srcs = glob(
         ["**/*.spec.ts"],
         exclude = ["**/*.e2e.spec.ts"],
@@ -66,13 +66,13 @@ ng_web_test_suite(
         "@npm//:node_modules/@material/floating-label/dist/mdc.floatingLabel.js",
     ],
     deps = [
-        ":input_tests_lib",
+        ":unit_tests_lib",
         "//src/material-experimental:mdc_require_config.js",
     ],
 )
 
 ng_e2e_test_library(
-    name = "e2e_test_sources",
+    name = "e2e_tests_lib",
     srcs = glob(["**/*.e2e.spec.ts"]),
     deps = [
         "//src/cdk/testing/private/e2e",
@@ -82,7 +82,7 @@ ng_e2e_test_library(
 e2e_test_suite(
     name = "e2e_tests",
     deps = [
-        ":e2e_test_sources",
+        ":e2e_tests_lib",
         "//src/cdk/testing/private/e2e",
     ],
 )
