--- a/src/material-experimental/mdc-radio/BUILD.bazel
+++ b/src/material-experimental/mdc-radio/BUILD.bazel
@@ -55,7 +55,7 @@ sass_binary(
 ###########
 
 ng_test_library(
-    name = "radio_tests_lib",
+    name = "unit_tests_lib",
     srcs = glob(
         ["**/*.spec.ts"],
         exclude = ["**/*.e2e.spec.ts"],
@@ -76,7 +76,7 @@ ng_web_test_suite(
         "@npm//:node_modules/@material/radio/dist/mdc.radio.js",
     ],
     deps = [
-        ":radio_tests_lib",
+        ":unit_tests_lib",
         "//src/material-experimental:mdc_require_config.js",
     ],
 )
