--- a/src/material-moment-adapter/BUILD.bazel
+++ b/src/material-moment-adapter/BUILD.bazel
@@ -27,7 +27,7 @@ ts_config(
 )
 
 ng_test_library(
-    name = "unit_test_sources",
+    name = "unit_tests_lib",
     srcs = glob(
         ["**/*.spec.ts"],
         exclude = ["**/*.e2e.spec.ts"],
@@ -49,7 +49,7 @@ ng_web_test_suite(
     ],
     deps = [
         ":require-config.js",
-        ":unit_test_sources",
+        ":unit_tests_lib",
     ],
 )
 
